// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elseStatementNewline.js - {"elseStatementNewLine":false} format 1`] = `
====================================options=====================================
elseStatementNewLine: false
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (cond) {
    code;
} else {
    code;
}

if (cond) {
    code;
    // comment
    if (cond) {
        code;
    } else { //comment here
        code
    }
}    else {
    code;
}
=====================================output=====================================
if (cond) {
  code;
} else {
  code;
}

if (cond) {
  code;
  // comment
  if (cond) {
    code;
  } else {
    //comment here
    code;
  }
} else {
  code;
}

================================================================================
`;

exports[`elseStatementNewline.js - {"elseStatementNewLine":true} format 1`] = `
====================================options=====================================
elseStatementNewLine: true
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (cond) {
    code;
} else {
    code;
}

if (cond) {
    code;
    // comment
    if (cond) {
        code;
    } else { //comment here
        code
    }
}    else {
    code;
}
=====================================output=====================================
if (cond) {
  code;
}
else {
  code;
}

if (cond) {
  code;
  // comment
  if (cond) {
    code;
  }
  else {
    //comment here
    code;
  }
}
else {
  code;
}

================================================================================
`;
